--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "mercadopago/dx-php": "2.0"
+        "mercadopago/dx-php": "2.0",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
